// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`radioGroup > renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-2 {
  cursor: text;
}

.emotion-6 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0.5rem;
}

.emotion-6[aria-disabled='false'],
.emotion-6[aria-disabled='false']>label {
  cursor: pointer;
}

.emotion-6:hover[aria-disabled='false'] .emotion-9+.emotion-11 {
  fill: #8c40ef;
}

.emotion-6:hover[aria-disabled='false'] .emotion-9+.emotion-11 .emotion-13 {
  fill: #e5dbfd;
}

.emotion-6:hover[aria-disabled='false'] .emotion-9[aria-invalid='true']+.emotion-11 {
  fill: #b3144d;
}

.emotion-6:hover[aria-disabled='false'] .emotion-9[aria-invalid='true']+.emotion-11 .emotion-13 {
  fill: #ffd3e3;
}

.emotion-6[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-6[aria-disabled='true']>label,
.emotion-6[aria-disabled='true'] .emotion-9 {
  cursor: not-allowed;
}

.emotion-6[aria-disabled='true'] .emotion-11 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.emotion-6[aria-disabled='true'] .emotion-11 .emotion-13 {
  fill: #f3f3f4;
}

.emotion-8 {
  cursor: pointer;
  position: absolute;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.emotion-8+.emotion-11 .emotion-15 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-8:checked+svg .emotion-15 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-8:checked[aria-disabled='false'][aria-invalid='false']+.emotion-11 {
  fill: #8c40ef;
}

.emotion-8:checked[aria-disabled='true'][aria-invalid='false']+.emotion-11 {
  fill: #d8c5fc;
}

.emotion-8[aria-invalid='true']:not([aria-disabled='true'])+.emotion-11 {
  fill: #e51963;
}

.emotion-8[aria-disabled='false']:active+.emotion-11 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.emotion-8[aria-disabled='false']:active+.emotion-11 .emotion-13 {
  fill: #f1eefc;
}

.emotion-8[aria-disabled='false']:focus-visible+.emotion-11 {
  outline: -webkit-focus-ring-color auto 1px;
}

.emotion-8[aria-invalid='true']:focus+.emotion-11 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.emotion-8[aria-invalid='true']:focus+.emotion-11 .emotion-13 {
  fill: #ffebf2;
}

.emotion-10 {
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
  border-radius: 100%;
  fill: #d9dadd;
}

.emotion-10 .emotion-13 {
  fill: #ffffff;
}

.emotion-16 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <fieldset
        class="emotion-0 emotion-1"
      >
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.75rem_xxsmall__toi52u27 styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
          >
            <legend
              class="emotion-2 emotion-3 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            >
              Label
            </legend>
          </div>
          <div
            class="styles__toi52u0 styles_alignItems_start_xxsmall__toi52u3j styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
          >
            <div
              class="emotion-4 emotion-5 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
            >
              <div
                aria-disabled="false"
                class="emotion-6 emotion-7"
                data-checked="true"
                data-error="false"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  checked=""
                  class="emotion-8 emotion-9"
                  id="«r1»"
                  name="radio"
                  type="radio"
                  value="value-1"
                />
                <svg
                  class="emotion-10 emotion-11"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="2"
                    />
                    <circle
                      class="emotion-12 emotion-13"
                      cx="12"
                      cy="12"
                      r="8"
                    />
                    <circle
                      class="emotion-14 emotion-15"
                      cx="12"
                      cy="12"
                      r="5"
                    />
                  </g>
                </svg>
                <label
                  class="emotion-16 emotion-17 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
                  for="«r1»"
                >
                  Radio 1
                </label>
              </div>
            </div>
            <div
              class="emotion-4 emotion-5 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
            >
              <div
                aria-disabled="false"
                class="emotion-6 emotion-7"
                data-checked="false"
                data-error="false"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  class="emotion-8 emotion-9"
                  id="«r4»"
                  name="radio"
                  type="radio"
                  value="value-2"
                />
                <svg
                  class="emotion-10 emotion-11"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="2"
                    />
                    <circle
                      class="emotion-12 emotion-13"
                      cx="12"
                      cy="12"
                      r="8"
                    />
                    <circle
                      class="emotion-14 emotion-15"
                      cx="12"
                      cy="12"
                      r="5"
                    />
                  </g>
                </svg>
                <label
                  class="emotion-16 emotion-17 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
                  for="«r4»"
                >
                  Radio 2
                </label>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`radioGroup > renders correctly with direction row 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-2 {
  cursor: text;
}

.emotion-6 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0.5rem;
}

.emotion-6[aria-disabled='false'],
.emotion-6[aria-disabled='false']>label {
  cursor: pointer;
}

.emotion-6:hover[aria-disabled='false'] .emotion-9+.emotion-11 {
  fill: #8c40ef;
}

.emotion-6:hover[aria-disabled='false'] .emotion-9+.emotion-11 .emotion-13 {
  fill: #e5dbfd;
}

.emotion-6:hover[aria-disabled='false'] .emotion-9[aria-invalid='true']+.emotion-11 {
  fill: #b3144d;
}

.emotion-6:hover[aria-disabled='false'] .emotion-9[aria-invalid='true']+.emotion-11 .emotion-13 {
  fill: #ffd3e3;
}

.emotion-6[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-6[aria-disabled='true']>label,
.emotion-6[aria-disabled='true'] .emotion-9 {
  cursor: not-allowed;
}

.emotion-6[aria-disabled='true'] .emotion-11 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.emotion-6[aria-disabled='true'] .emotion-11 .emotion-13 {
  fill: #f3f3f4;
}

.emotion-8 {
  cursor: pointer;
  position: absolute;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.emotion-8+.emotion-11 .emotion-15 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-8:checked+svg .emotion-15 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-8:checked[aria-disabled='false'][aria-invalid='false']+.emotion-11 {
  fill: #8c40ef;
}

.emotion-8:checked[aria-disabled='true'][aria-invalid='false']+.emotion-11 {
  fill: #d8c5fc;
}

.emotion-8[aria-invalid='true']:not([aria-disabled='true'])+.emotion-11 {
  fill: #e51963;
}

.emotion-8[aria-disabled='false']:active+.emotion-11 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.emotion-8[aria-disabled='false']:active+.emotion-11 .emotion-13 {
  fill: #f1eefc;
}

.emotion-8[aria-disabled='false']:focus-visible+.emotion-11 {
  outline: -webkit-focus-ring-color auto 1px;
}

.emotion-8[aria-invalid='true']:focus+.emotion-11 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.emotion-8[aria-invalid='true']:focus+.emotion-11 .emotion-13 {
  fill: #ffebf2;
}

.emotion-10 {
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
  border-radius: 100%;
  fill: #d9dadd;
}

.emotion-10 .emotion-13 {
  fill: #ffffff;
}

.emotion-16 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <fieldset
        class="emotion-0 emotion-1"
      >
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.75rem_xxsmall__toi52u27 styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
          >
            <legend
              class="emotion-2 emotion-3 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            >
              Label
            </legend>
          </div>
          <div
            class="styles__toi52u0 styles_alignItems_start_xxsmall__toi52u3j styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1rem_xxsmall__toi52ud styles_justifyContent_normal_xxsmall__toi52u5d"
          >
            <div
              class="emotion-4 emotion-5 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
            >
              <div
                aria-disabled="false"
                class="emotion-6 emotion-7"
                data-checked="true"
                data-error="false"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  checked=""
                  class="emotion-8 emotion-9"
                  id="«r8»"
                  name="radio"
                  type="radio"
                  value="value-1"
                />
                <svg
                  class="emotion-10 emotion-11"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="2"
                    />
                    <circle
                      class="emotion-12 emotion-13"
                      cx="12"
                      cy="12"
                      r="8"
                    />
                    <circle
                      class="emotion-14 emotion-15"
                      cx="12"
                      cy="12"
                      r="5"
                    />
                  </g>
                </svg>
                <label
                  class="emotion-16 emotion-17 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
                  for="«r8»"
                >
                  Radio 1
                </label>
              </div>
            </div>
            <div
              class="emotion-4 emotion-5 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
            >
              <div
                aria-disabled="false"
                class="emotion-6 emotion-7"
                data-checked="false"
                data-error="false"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  class="emotion-8 emotion-9"
                  id="«rb»"
                  name="radio"
                  type="radio"
                  value="value-2"
                />
                <svg
                  class="emotion-10 emotion-11"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="2"
                    />
                    <circle
                      class="emotion-12 emotion-13"
                      cx="12"
                      cy="12"
                      r="8"
                    />
                    <circle
                      class="emotion-14 emotion-15"
                      cx="12"
                      cy="12"
                      r="5"
                    />
                  </g>
                </svg>
                <label
                  class="emotion-16 emotion-17 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
                  for="«rb»"
                >
                  Radio 2
                </label>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`radioGroup > renders correctly with error content 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-2 {
  cursor: text;
}

.emotion-6 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0.5rem;
}

.emotion-6[aria-disabled='false'],
.emotion-6[aria-disabled='false']>label {
  cursor: pointer;
}

.emotion-6:hover[aria-disabled='false'] .emotion-9+.emotion-11 {
  fill: #8c40ef;
}

.emotion-6:hover[aria-disabled='false'] .emotion-9+.emotion-11 .emotion-13 {
  fill: #e5dbfd;
}

.emotion-6:hover[aria-disabled='false'] .emotion-9[aria-invalid='true']+.emotion-11 {
  fill: #b3144d;
}

.emotion-6:hover[aria-disabled='false'] .emotion-9[aria-invalid='true']+.emotion-11 .emotion-13 {
  fill: #ffd3e3;
}

.emotion-6[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-6[aria-disabled='true']>label,
.emotion-6[aria-disabled='true'] .emotion-9 {
  cursor: not-allowed;
}

.emotion-6[aria-disabled='true'] .emotion-11 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.emotion-6[aria-disabled='true'] .emotion-11 .emotion-13 {
  fill: #f3f3f4;
}

.emotion-8 {
  cursor: pointer;
  position: absolute;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.emotion-8+.emotion-11 .emotion-15 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-8:checked+svg .emotion-15 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-8:checked[aria-disabled='false'][aria-invalid='false']+.emotion-11 {
  fill: #8c40ef;
}

.emotion-8:checked[aria-disabled='true'][aria-invalid='false']+.emotion-11 {
  fill: #d8c5fc;
}

.emotion-8[aria-invalid='true']:not([aria-disabled='true'])+.emotion-11 {
  fill: #e51963;
}

.emotion-8[aria-disabled='false']:active+.emotion-11 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.emotion-8[aria-disabled='false']:active+.emotion-11 .emotion-13 {
  fill: #f1eefc;
}

.emotion-8[aria-disabled='false']:focus-visible+.emotion-11 {
  outline: -webkit-focus-ring-color auto 1px;
}

.emotion-8[aria-invalid='true']:focus+.emotion-11 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.emotion-8[aria-invalid='true']:focus+.emotion-11 .emotion-13 {
  fill: #ffebf2;
}

.emotion-10 {
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
  border-radius: 100%;
  fill: #d9dadd;
}

.emotion-10 .emotion-13 {
  fill: #ffffff;
}

.emotion-16 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <fieldset
        class="emotion-0 emotion-1"
      >
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.75rem_xxsmall__toi52u27 styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
          >
            <legend
              class="emotion-2 emotion-3 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            >
              Label
            </legend>
          </div>
          <div
            class="styles__toi52u0 styles_alignItems_start_xxsmall__toi52u3j styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
          >
            <div
              class="emotion-4 emotion-5 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
            >
              <div
                aria-disabled="false"
                class="emotion-6 emotion-7"
                data-checked="true"
                data-error="true"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="true"
                  checked=""
                  class="emotion-8 emotion-9"
                  id="«rn»"
                  name="radio"
                  type="radio"
                  value="value-1"
                />
                <svg
                  class="emotion-10 emotion-11"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="2"
                    />
                    <circle
                      class="emotion-12 emotion-13"
                      cx="12"
                      cy="12"
                      r="8"
                    />
                    <circle
                      class="emotion-14 emotion-15"
                      cx="12"
                      cy="12"
                      r="5"
                    />
                  </g>
                </svg>
                <label
                  class="emotion-16 emotion-17 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
                  for="«rn»"
                >
                  Radio 1
                </label>
              </div>
            </div>
            <div
              class="emotion-4 emotion-5 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
            >
              <div
                aria-disabled="false"
                class="emotion-6 emotion-7"
                data-checked="false"
                data-error="true"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="true"
                  class="emotion-8 emotion-9"
                  id="«rq»"
                  name="radio"
                  type="radio"
                  value="value-2"
                />
                <svg
                  class="emotion-10 emotion-11"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="2"
                    />
                    <circle
                      class="emotion-12 emotion-13"
                      cx="12"
                      cy="12"
                      r="8"
                    />
                    <circle
                      class="emotion-14 emotion-15"
                      cx="12"
                      cy="12"
                      r="5"
                    />
                  </g>
                </svg>
                <label
                  class="emotion-16 emotion-17 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
                  for="«rq»"
                >
                  Radio 2
                </label>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
      <span
        class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_danger__m4c9owd style_prominence_default__m4c9owi style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_8__m4c9ow1k style_undefined_compound_72__m4c9ow3c"
      >
        Eror content
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`radioGroup > renders correctly with helper content 1`] = `
<DocumentFragment>
  .emotion-0 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-2 {
  cursor: text;
}

.emotion-6 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0.5rem;
}

.emotion-6[aria-disabled='false'],
.emotion-6[aria-disabled='false']>label {
  cursor: pointer;
}

.emotion-6:hover[aria-disabled='false'] .emotion-9+.emotion-11 {
  fill: #8c40ef;
}

.emotion-6:hover[aria-disabled='false'] .emotion-9+.emotion-11 .emotion-13 {
  fill: #e5dbfd;
}

.emotion-6:hover[aria-disabled='false'] .emotion-9[aria-invalid='true']+.emotion-11 {
  fill: #b3144d;
}

.emotion-6:hover[aria-disabled='false'] .emotion-9[aria-invalid='true']+.emotion-11 .emotion-13 {
  fill: #ffd3e3;
}

.emotion-6[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-6[aria-disabled='true']>label,
.emotion-6[aria-disabled='true'] .emotion-9 {
  cursor: not-allowed;
}

.emotion-6[aria-disabled='true'] .emotion-11 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.emotion-6[aria-disabled='true'] .emotion-11 .emotion-13 {
  fill: #f3f3f4;
}

.emotion-8 {
  cursor: pointer;
  position: absolute;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.emotion-8+.emotion-11 .emotion-15 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-8:checked+svg .emotion-15 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-8:checked[aria-disabled='false'][aria-invalid='false']+.emotion-11 {
  fill: #8c40ef;
}

.emotion-8:checked[aria-disabled='true'][aria-invalid='false']+.emotion-11 {
  fill: #d8c5fc;
}

.emotion-8[aria-invalid='true']:not([aria-disabled='true'])+.emotion-11 {
  fill: #e51963;
}

.emotion-8[aria-disabled='false']:active+.emotion-11 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.emotion-8[aria-disabled='false']:active+.emotion-11 .emotion-13 {
  fill: #f1eefc;
}

.emotion-8[aria-disabled='false']:focus-visible+.emotion-11 {
  outline: -webkit-focus-ring-color auto 1px;
}

.emotion-8[aria-invalid='true']:focus+.emotion-11 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.emotion-8[aria-invalid='true']:focus+.emotion-11 .emotion-13 {
  fill: #ffebf2;
}

.emotion-10 {
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
  border-radius: 100%;
  fill: #d9dadd;
}

.emotion-10 .emotion-13 {
  fill: #ffffff;
}

.emotion-16 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
    >
      <fieldset
        class="emotion-0 emotion-1"
      >
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.75rem_xxsmall__toi52u27 styles_justifyContent_normal_xxsmall__toi52u5d"
        >
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
          >
            <legend
              class="emotion-2 emotion-3 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_default__m4c9owi style_variant_bodyStrong__m4c9owq style_disabled_false__m4c9ow1b style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
            >
              Label
            </legend>
          </div>
          <div
            class="styles__toi52u0 styles_alignItems_start_xxsmall__toi52u3j styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.5rem_xxsmall__toi52u7 styles_justifyContent_normal_xxsmall__toi52u5d"
          >
            <div
              class="emotion-4 emotion-5 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
            >
              <div
                aria-disabled="false"
                class="emotion-6 emotion-7"
                data-checked="true"
                data-error="false"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  checked=""
                  class="emotion-8 emotion-9"
                  id="«rf»"
                  name="radio"
                  type="radio"
                  value="value-1"
                />
                <svg
                  class="emotion-10 emotion-11"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="2"
                    />
                    <circle
                      class="emotion-12 emotion-13"
                      cx="12"
                      cy="12"
                      r="8"
                    />
                    <circle
                      class="emotion-14 emotion-15"
                      cx="12"
                      cy="12"
                      r="5"
                    />
                  </g>
                </svg>
                <label
                  class="emotion-16 emotion-17 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
                  for="«rf»"
                >
                  Radio 1
                </label>
              </div>
            </div>
            <div
              class="emotion-4 emotion-5 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u31 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_0.25rem_xxsmall__toi52u1v styles_justifyContent_normal_xxsmall__toi52u5d"
            >
              <div
                aria-disabled="false"
                class="emotion-6 emotion-7"
                data-checked="false"
                data-error="false"
              >
                <input
                  aria-disabled="false"
                  aria-invalid="false"
                  class="emotion-8 emotion-9"
                  id="«ri»"
                  name="radio"
                  type="radio"
                  value="value-2"
                />
                <svg
                  class="emotion-10 emotion-11"
                  viewBox="0 0 24 24"
                >
                  <g>
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                      stroke-width="2"
                    />
                    <circle
                      class="emotion-12 emotion-13"
                      cx="12"
                      cy="12"
                      r="8"
                    />
                    <circle
                      class="emotion-14 emotion-15"
                      cx="12"
                      cy="12"
                      r="5"
                    />
                  </g>
                </svg>
                <label
                  class="emotion-16 emotion-17 style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_prominence_default__m4c9owi style_variant_body__m4c9owm style_disabled_false__m4c9ow1b style_undefined_compound_72__m4c9ow3c"
                  for="«ri»"
                >
                  Radio 2
                </label>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
      <span
        class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_neutral__m4c9owb style_prominence_weak__m4c9owl style_variant_caption__m4c9ows style_disabled_false__m4c9ow1b style_undefined_compound_27__m4c9ow23 style_undefined_compound_75__m4c9ow3f"
      >
        Helper content
      </span>
    </div>
  </div>
</DocumentFragment>
`;
